fix bug 328555, Double-clicking on tab group in Manager doesn't open the bookmarks, r=stuart.morgan, sr=pinkerton

Patch by Chris Lawson <bugzilla@chrislawson.net>